# Shoots.Engine

./: .gitignore  AGENT.md  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.ai/patches/: README.md  patch-2026-01-29-20-56-36.diff  patch-2026-01-29-21-06-11.diff  patch-2026-01-29-21-09-53.diff  patch-2026-01-29-21-13-44.diff  patch-2026-01-30-00-54-44.diff  patch-2026-01-30-00-59-10.diff  patch-2026-01-30-01-04-36.diff  patch-2026-01-30-01-14-00.diff  patch-2026-01-30-01-23-04.diff  patch-2026-01-30-01-53-32.diff  patch-2026-01-30-02-18-58.diff  patch-2026-01-30-03-26-30.diff  patch-2026-01-30-03-35-04.diff  patch-2026-01-30-03-42-12.diff  patch-2026-01-30-03-47-09.diff  patch-2026-01-30-03-50-12.diff  patch-2026-01-30-03-58-28.diff  patch-2026-01-30-18-52-09.diff  patch-2026-02-01-21-09-17.diff  patch-2026-02-01-21-14-31.diff  patch-2026-02-01-23-34-30.diff
docs/: GOALS.md  abi-contract.md  abi-surface-snapshot.md  api-configuration.md  api-embeddings.md  api-engine-lifecycle.md  api-errors.md  api-inference.md  codex-operating-policy.md  engine-capabilities.md  host-responsibility-contract.md  integration-examples.md  language-selection.md
examples/consumer_shared/: CMakeLists.txt  main.c
examples/consumer_static/: CMakeLists.txt  main.c
tools/engine/: CMakeLists.txt  STATUS.md
tools/engine/cmake/: check_sources_lock.cmake  check_symbol_free_tu.cmake
tools/engine/include/shoots/: shoots.h
tools/engine/src/: CMakeLists.txt  README.md  commands.c  commands.h  core_engine.c  core_engine.h  empty.c  engine.c  engine_internal.h  exec_gate.c  exec_gate.h  execution_spine.c  execution_spine.h  ledger.c  ledger.h  planner.c  planner.h  provider_runtime.c  provider_runtime.h  selfcheck.c  session.c  tools.c  tools.h
tools/engine/tests/: CMakeLists.txt  README.md  always_assert.h  determinism_replay_test.c  guardrail_limits_test.c  malformed_receipt_test.c  multi_request_ordering_test.c  multi_session_isolation_test.c  oom_guardrails_test.c  provider_roundtrip_test.c  public_execution_api_test.c  snapshot_contract_test.c  test_support.h
tools/engine/tests/header_smoke/: header_smoke_engine_internal.c  header_smoke_execution_spine.c  header_smoke_provider_runtime.c  header_smoke_public.c  header_smoke_public_api.c  provider_exports_signature.c
